# errling

./: .gitignore  Cargo.toml  README.md  justfile
.github/: CODEOWNERS
.github/workflow/: publish.yml  rust.yml
errling/: Cargo.toml
errling/src/: constraint_violation.rs  internal.rs  invalid_argument.rs  invalid_state.rs  lib.rs  unavailable.rs
